# SYK

./: .gitignore  LICENSE  Makefile  README.md  base.def  syk.def
src/: CMakeLists.txt  bench.cpp  boost_util.hpp  checkpoint.fbs  complex.fbs  concat_ham.cpp  cuda_diagonalize.cu  cuda_diagonalize.hpp  diagonalize.cu  diagonalize.hpp  distributed_matrix.hpp  elpa_wrapper.hpp  filter.hpp  gauss_hermite_coeff.py  gen_ham.cpp  gpu_diagonalize.cu  gpu_diagonalize.hpp  heisenberg.hpp  input.fbs  magma_diagaonalize.hpp  magma_diagonalize.hpp  mixer.cpp  output.fbs  parallel.hpp  parallel_types.hpp  pauli.hpp  plot_out.gp  random_matrix.hpp  serdes.hpp  spectral.cpp  syk.hpp  syk_types.hpp  types.fbs  util.hpp
src/cmake/: FindCUDAToolkit.cmake  FindELPA.cmake  FindLAPACK.cmake  FindMagma.cmake  FindScaLAPACK.cmake
src/plot/: plataeu.gp  plot_spectral.py  setup.py  spectral.gp  variance.gp
src/plot/sykplot/: spectral_form_factor.pyx  spectral_form_factor_impl.hpp
